# better-minify-html

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  format  next-version  package.json  pnpm-lock.yaml
.github/workflows/: README.md
bench/: README.md  fetch.js  graph.js  results.js
bench/runners/: common.js
minhtml/: Cargo.toml  README.md
minify-html/: Cargo.toml
minify-html-common/: Cargo.toml
minify-html-common/src/tests/: mod.rs
minify-html-nodejs/: Cargo.toml  index.js  package.json  pnpm-lock.yaml
minify-html-nodejs/plat-pkg/: README.md  package.json  package.json.gen.js
minify-html-wasm/: Cargo.toml  README.md  build  package.merge.json
minify-html-wasm/src/: lib.rs
minify-html/src/tests/: mod.rs
notes/: Script data.md
