[package]
name = "minify-html-common"
description = "Common code and data for better-minify-html*"
license = "MIT"
homepage = "https://github.com/kyr0/better-minify-html"
repository = "https://github.com/kyr0/better-minify-html.git"
version = "0.0.2"
authors = ["Wilson Lin <code@wilsonl.in>", "Aron Homberg <info@aron-homberg.de>"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1"
memchr = "2"
once_cell = "1.20.2"

[build-dependencies]
itertools = "0.13.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
