[package]
name = "minify-html"
description = "Extremely fast and smart HTML + JS + CSS minifier"
license = "MIT"
homepage = "https://github.com/kyr0/better-minify-html"
readme = "README.md"
keywords = ["html", "compress", "minifier", "js", "css"]
categories = ["compression", "development-tools::build-utils", "web-programming"]
repository = "https://github.com/kyr0/better-minify-html.git"
version = "0.19.0"
authors = ["Wilson Lin <code@wilsonl.in>", "Aron Homberg <info@aron-homberg.de>"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ahash = "0.8.11"
aho-corasick = "1.1"
lightningcss = "1.0.0-alpha.61"
memchr = "2.7.4"
minify-html-common = { version = "0.0.2", path = "../minify-html-common" }
minify-js = "0.6.0"
once_cell = "1.20.2"
